<resources>
    <string name="app_name">Проект</string>
    <string name="title_study">Обучение</string>
    <string name="title_statistics">Результаты</string>
    <string name="title_profile">Профиль</string>
    <string name="statistics">Результаты</string>
    <string name="study">Обучение</string>
    <string name="profile">Профиль</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="dark_theme_key">dark_theme</string>
    <string name="login">Войти</string>
    <string name="hint_email">Email</string>
    <string name="password">Пароль</string>
    <string name="login_to_registration">Создать аккаунт</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="registration_to_login">Войти в существующий аккаунт</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="is_teacher">учитель</string>
    <string name="token">token</string>
    <string name="settings_exit">exit</string>
    <string name="first_start">firstStart</string>
    <string name="isAuth">isAuth</string>
    <string name="edit_account">Редактировать аккаунт</string>
    <string name="verbose">Подробнее</string>
    <string name="start_exam">Начать выполнение</string>
    <string name="comments">Комментарии</string>
    <string name="comment_hint">Текст комментария</string>
    <string name="send_comment">Комментировать</string>
    <string name="title_comment">Оставить комментарий</string>
    <string name="fragment_exam_create">Создание проверочной</string>
    <string name="exam_detail_fragment" />
    <string name="error">Посмотреть ошибки </string>
    <string name="positive_button_exam">Прервать</string>
    <string name="negative_button_exam">Отмена</string>
    <string name="send_result">Проверить</string>
    <string name="exit_from_passing_fragment">Выйти</string>
    <string name="none_internet">Отсутствует подключение к сети</string>
    <string name="to_main">Вернуться на главную</string>
    <string name="errors">Ошибки:</string>
    <string name="result">Результат</string>
    <string name="verbose_error">Список ошибок</string>
    <string name="title_dialog_errors">Список ошибок</string>
    <string name="not_complete">Не завершено</string>
    <string name="exam_editfragment" />
    <string name="title">Заголовок</string>
    <string name="description">Описание</string>
    <string name="subject">Предмет</string>
    <string name="classroom">Класс</string>
    <string name="publish_exam">Опубликовать</string>
    <string name="add_exam">Добавление проверочной</string>
    <string name="question">Вопрос</string>
    <string name="count_scores">Кол-во баллов:</string>
    <string name="answer_variant">Вариант ответа</string>
    <string name="add_task">Добавить задание</string>
    <string name="new_name">Новое имя</string>
    <string name="edit_name">Изменить имя</string>
    <string name="new_surname">Новая фамилия</string>
    <string name="edit_email">Изменить email</string>
    <string name="new_email">Новый email</string>
    <string name="edit_password">Изменить пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="fragment_profile_edit">Редактирование аккаунта</string>
    <string name="edit_exam">Изменение проверочной</string>
    <string name="publish_edit_exam">Изменить проверочную</string>
    <string name="statistics_not">Результатов пока нет</string>
    <string name="delete_exam">Удалить проверочную</string>
    <string name="new_password_repeat">Повторите новый пароль</string>
    <string name="password_not_match">Пароли не совпадают</string>
    <string name="warnion">Вы точно хотите удалить проверочную?</string>
    <string name="message_delete_exam_dialog">Восстановить проверочную будет невозможно</string>
    <string name="fragment_exam_statistics">Результаты</string>

</resources>