<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_study">

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.example.schoolandroid.ui.study.StudyFragment"
        android:label="@string/title_study"
        tools:layout="@layout/fragment_study" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.schoolandroid.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.schoolandroid.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.schoolandroid.ui.settings.SettingsFragment"
        android:label="SettingsFragment" />
</navigation>